# sentiric-media-service

./: .context.md  .dockerignore  .env.development  .env.docker  .env.example  .env.local.example  .env.test  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  LOGIC.md  PERFORMANCE.md  README.md  TASKS.md  build.rs  debug.sh  development.env  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.service.yml  docker-compose.test.yml  docker.env  go.mod  index.js  load-env.ps1  main.go  package.json  run-tests.sh
.github/workflows/: docker-publish.yml
docs/: TESTING_STRATEGY.md
examples/: README.md  agent_client.rs  call_simulator.rs  dialplan_client.rs  end_to_end_call_validator.rs  live_audio_client.rs  realistic_call_flow.rs  recording_client.rs  sip_signaling_client.rs  test.rs  tts_stream_client.rs  user_client.rs
examples/shared/: codecs.rs  grpc_client.rs  mod.rs  rtp_utils.rs  s3_client.rs
src/: app.rs  audio.rs  config.rs  lib.rs  main.rs  metrics.rs  rabbitmq.rs  state.rs  telemetry.rs  tls.rs  utils.rs
src/grpc/: error.rs  mod.rs  service.rs
src/persistence/: mod.rs  worker.rs
src/rtp/: codecs.rs  command.rs  handlers.rs  mod.rs  processing.rs  session.rs  session_handlers.rs  session_utils.rs  stream.rs  writers.rs
