[package]
name = "sentiric-media-service"
version = "0.2.0"
edition = "2021"

[dependencies]
# Temel Asenkron ve gRPC
tokio = { version = "1.37.0", features = ["full"] }
tonic = { version = "0.11.0", features = ["tls"] }
prost = "0.12.3"
futures = "0.3.30"
tokio-stream = { version = "0.1.15", features = ["sync", "net"] }
tokio-util = { version = "0.7.10", features = ["full"] }

# Loglama ve Gözlemlenebilirlik
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "registry"] }
metrics = "0.22.0"
metrics-exporter-prometheus = "0.13.1"
hyper = { version = "0.14.28", features = ["full"] }

# Konfigürasyon ve Hata Yönetimi
dotenvy = "0.15.7"
anyhow = "1.0.82"

# Medya İşleme
rtp = "0.7.0"
hound = "3.5.1"
bytes = "1.6.0"
rubato = "0.14.1"
symphonia = { version = "0.5.4", features = ["all-codecs", "all-formats"] }
webrtc-util = { version = "0.7.0", features = ["marshal"] }

# TLS ve Kripto
rustls = { version = "0.23.31", features = ["ring"] }
rustls-pemfile = "2.1.2"
ring = "0.17.8"

# Yardımcı Kütüphaneler
rand = "0.8.5"
chrono = "0.4.38"
base64 = "0.22.1"
backtrace = "0.3.73"
uuid = { version = "1.8.0", features = ["v4"] }

# Kayıt ve S3 & RabbitMQ
async-trait = "0.1.80"
url = "2.5.0"
aws-config = "1.1.8"
aws-sdk-s3 = "1.20.0"
http-body = "0.4.5"
aws-credential-types = "1.1.8"
lapin = "2.3.1"
serde_json = "1.0.117"

# --- GÜNCELLENEN KONTRAT ---
[dependencies.sentiric-contracts]
git = "https://github.com/sentiric/sentiric-contracts.git"
tag = "v1.13.1"

[dev-dependencies]
test-log = "0.2.14"
tokio-stream = { version = "0.1.15", features = ["net"] }