[package]
name = "sentiric-media-service"
version = "0.4.7"
edition = "2021"

[dependencies]
# Async & gRPC
tokio = { version = "1.37", features = ["full"] }
tonic = { version = "0.11", features = ["tls", "tls-roots"] }
prost = "0.12"
prost-types = "0.12"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync", "net"] }
tokio-util = { version = "0.7", features = ["full"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
hyper = { version = "0.14", features = ["full"] }

# Config & Data
dotenvy = "0.15"
anyhow = "1.0"
rand = "0.8"
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4" }
base64 = "0.22"
serde_json = "1.0"
url = "2.5"
async-trait = "0.1"

# Media Processing
hound = "3.5"
bytes = "1.6"
rubato = "0.14" 
symphonia = { version = "0.5", features = ["all-codecs", "all-formats"] }

# Infrastructure
aws-config = "1.1"
aws-sdk-s3 = "1.20"
aws-credential-types = "1.1"
lapin = "2.3"
rustls = { version = "0.23", features = ["ring"] }

# --- THE IRON CORE (UPGRADED) ---
sentiric-rtp-core = { git = "https://github.com/sentiric/sentiric-rtp-core.git", tag = "v1.3.3" }
sentiric-sip-core = { git = "https://github.com/sentiric/sentiric-sip-core.git", tag = "v1.4.2" }
sentiric-contracts = { git = "https://github.com/sentiric/sentiric-contracts.git", tag = "v1.16.0" }